Change font colors, change footer colors, fix score table's alignment

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
   --body-background: rgb(98, 132, 165);
   --selected-border-color: rgb(255, 228, 73);
@@ -32,8 +34,9 @@ header {
 
 header h1 {
   font-family: 'Shadows Into Light', sans-serif;
-  font-size: 3em;
-  color: rgb(0, 0, 0);
+  font-size: 3.5em;
+  text-shadow: 5px 0 2px rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .container {
@@ -59,10 +62,12 @@ main {
   position: relative;
   top: -60px;
   display: flex;
+  gap: 100px;
   justify-content: space-between;
-  width: 60%;
   font-family: 'Shadows Into Light', sans-serif;
   font-size: 2.2em;
+  color: #fff;
+  text-shadow: 0 2px 5px #000;
 }
 
 .handsSection {
@@ -77,7 +82,7 @@ main {
   width: 100px;
   height: 100px;
   border-radius: 10px;
-  border: 2px solid black;
+  border: 2px solid rgb(53, 71, 77);
   background-color: rgb(184, 205, 228);
   display: flex;
   justify-content: center;
@@ -100,14 +105,27 @@ main {
   font-family: 'Shadows Into Light', sans-serif; 
   font-size: 2em;
   height: 10px;
+  color: #fff;
+  text-shadow: 0 2px 2px #000;
 }
 
 footer {
   display: flex;
-  flex-direction: column;
+  background-color: rgb(135, 162, 192);
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: -10px;
   align-items: center;
   justify-content: center;
-  gap: 2px;
+  gap: 15px;
   font-size: .7em;
   margin-bottom: 10px;
+  color: rgb(0, 0, 0);
+  font-family: 'Roboto', sans-serif;
+  text-align: right;
+}
+
+footer a {
+  color: rgb(0, 0, 0);
 }
